# FEM-CarbonDiffusion

./: CMakeLists.txt  LICENSE  README.md  assemble_matrix_A.m  basis_function.m  boundary_function.m  carbon_diffusion_2d.m  func_D.m  func_exact.m  func_f.m  gauss2d_integral_trial_test.m  generate_boundarynodes.m  temp_test.m  test.m  time_iteration.m  treat_boundary.m
cpp/: CMakeLists.txt
cpp/include/: AssembleMatrix.h  CarbonDiffusion.h  InfoMatrix.h
cpp/src/: AssembleMatrix.cpp  CarbonDiffusion.cpp  InfoMatrix.cpp  main.cpp  project1.cpp
cpp/test/: test_main.cpp  test_project1.cpp
matlab/: P.txt  README.md  T.txt  assemble_vector_b.m  boundary_function.m  carbon_diffusion_2d.m  gauss2d_integral_test.m  generate_info_matrix.m  generate_num.m  get_maxerror.m  initial_function.m  main.m  temp_test.m  test.m  test_assemble_matrix.m  test_basis_func.m  test_info_matrix.m  treat_boundary.m
